[gd_scene load_steps=4 format=2]

[ext_resource path="res://Spatial.gd" type="Script" id=1]
[ext_resource path="res://default_env.tres" type="Environment" id=2]
[ext_resource path="res://Control.gd" type="Script" id=3]

[node name="Spatial" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.707107, -0.5, 0.5, 0, 0.707107, 0.707107, -0.707107, -0.5, 0.5, 30, 30, 30 )
environment = ExtResource( 2 )

[node name="DisplayMesh" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, -0.42765, -18.8343, 1.15472 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="FileDialog" type="FileDialog" parent="Control"]
margin_left = -10.0
margin_top = -10.0
margin_right = 265.0
margin_bottom = 120.0
popup_exclusive = true
window_title = "Open a File"
mode = 0
access = 2
current_dir = "C:/Users/Owner/Documents/Projects/SubdivisionSurfaces"
current_path = "C:/Users/Owner/Documents/Projects/SubdivisionSurfaces/"

[node name="StatePanel" type="PanelContainer" parent="Control"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -66.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/StatePanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 793.0
margin_bottom = 59.0
size_flags_vertical = 0

[node name="TransGrid" type="GridContainer" parent="Control/StatePanel/HBoxContainer"]
margin_right = 287.0
margin_bottom = 48.0
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 2

[node name="RotationState" type="GridContainer" parent="Control/StatePanel/HBoxContainer/TransGrid"]
margin_right = 287.0
margin_bottom = 48.0
custom_constants/vseparation = 10
columns = 4

[node name="RotationLabel" type="Label" parent="Control/StatePanel/HBoxContainer/TransGrid/RotationState"]
margin_right = 53.0
margin_bottom = 14.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Rotation"

[node name="RotationXLabel" type="Label" parent="Control/StatePanel/HBoxContainer/TransGrid/RotationState"]
margin_left = 57.0
margin_right = 131.0
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "x"
align = 1
uppercase = true

[node name="RotationYLabel" type="Label" parent="Control/StatePanel/HBoxContainer/TransGrid/RotationState"]
margin_left = 135.0
margin_right = 209.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.12549, 1, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "y"
align = 1
uppercase = true

[node name="RotationZLabel" type="Label" parent="Control/StatePanel/HBoxContainer/TransGrid/RotationState"]
margin_left = 213.0
margin_right = 287.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0, 0.647059, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "z"
align = 1
uppercase = true

[node name="RotationReset" type="Button" parent="Control/StatePanel/HBoxContainer/TransGrid/RotationState"]
margin_left = 2.0
margin_top = 26.0
margin_right = 50.0
margin_bottom = 46.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_colors/font_color_disabled = Color( 0.392157, 0.392157, 0, 1 )
custom_colors/font_color = Color( 1, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 0, 1 )
action_mode = 0
text = "Reset"

[node name="RotationXState" type="SpinBox" parent="Control/StatePanel/HBoxContainer/TransGrid/RotationState"]
margin_left = 57.0
margin_top = 24.0
margin_right = 131.0
margin_bottom = 48.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="RotationYState" type="SpinBox" parent="Control/StatePanel/HBoxContainer/TransGrid/RotationState"]
margin_left = 135.0
margin_top = 24.0
margin_right = 209.0
margin_bottom = 48.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="RotationZState" type="SpinBox" parent="Control/StatePanel/HBoxContainer/TransGrid/RotationState"]
margin_left = 213.0
margin_top = 24.0
margin_right = 287.0
margin_bottom = 48.0
step = 0.1
allow_greater = true
allow_lesser = true

[node name="ModelLabel" type="Label" parent="Control/StatePanel/HBoxContainer/TransGrid"]
visible = false
margin_top = 79.0
margin_right = 73.0
margin_bottom = 93.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Model"
align = 2

[node name="ModelState" type="HBoxContainer" parent="Control/StatePanel/HBoxContainer/TransGrid"]
visible = false
margin_top = 74.0
margin_right = 152.0
margin_bottom = 98.0

[node name="ModelFileName" type="LineEdit" parent="Control/StatePanel/HBoxContainer/TransGrid/ModelState"]
margin_right = 58.0
margin_bottom = 24.0
size_flags_vertical = 2
text = "cube.obj"
editable = false

[node name="LoadButton" type="Button" parent="Control/StatePanel/HBoxContainer/TransGrid/ModelState"]
margin_left = 62.0
margin_right = 104.0
margin_bottom = 24.0
hint_tooltip = "Load Custom Mesh"
text = "Load"

[node name="CubeButton" type="Button" parent="Control/StatePanel/HBoxContainer/TransGrid/ModelState"]
margin_left = 108.0
margin_right = 152.0
margin_bottom = 24.0
hint_tooltip = "Load Default Cube Mesh"
text = "Cube"

[node name="HSeparator" type="VSeparator" parent="Control/StatePanel/HBoxContainer"]
margin_left = 291.0
margin_right = 295.0
margin_bottom = 52.0

[node name="PropsGrid" type="GridContainer" parent="Control/StatePanel/HBoxContainer"]
margin_left = 299.0
margin_right = 568.0
margin_bottom = 52.0
size_flags_horizontal = 0
size_flags_vertical = 0
columns = 4

[node name="ScaleLabel" type="Label" parent="Control/StatePanel/HBoxContainer/PropsGrid"]
margin_top = 5.0
margin_right = 36.0
margin_bottom = 19.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Scale"
align = 2

[node name="ScaleState" type="SpinBox" parent="Control/StatePanel/HBoxContainer/PropsGrid"]
margin_left = 40.0
margin_right = 114.0
margin_bottom = 24.0
size_flags_horizontal = 0
step = 0.1
value = 10.0
allow_greater = true
allow_lesser = true

[node name="SubdivisionLabel" type="Label" parent="Control/StatePanel/HBoxContainer/PropsGrid"]
margin_left = 118.0
margin_top = 5.0
margin_right = 191.0
margin_bottom = 19.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Subdivision"
align = 2

[node name="SubdivisionState" type="SpinBox" parent="Control/StatePanel/HBoxContainer/PropsGrid"]
margin_left = 195.0
margin_right = 269.0
margin_bottom = 24.0
size_flags_horizontal = 0
max_value = 5.0
rounded = true

[node name="FacesLabel" type="Label" parent="Control/StatePanel/HBoxContainer/PropsGrid"]
margin_top = 33.0
margin_right = 36.0
margin_bottom = 47.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Faces"
align = 2

[node name="FacesState" type="LineEdit" parent="Control/StatePanel/HBoxContainer/PropsGrid"]
margin_left = 40.0
margin_top = 28.0
margin_right = 114.0
margin_bottom = 52.0
size_flags_horizontal = 3
text = "0"
editable = false

[node name="HSeparator2" type="VSeparator" parent="Control/StatePanel/HBoxContainer"]
margin_left = 572.0
margin_right = 576.0
margin_bottom = 52.0

[node name="ViewGrid" type="GridContainer" parent="Control/StatePanel/HBoxContainer"]
margin_left = 580.0
margin_right = 675.0
margin_bottom = 52.0
columns = 2

[node name="Wireframe" type="CheckBox" parent="Control/StatePanel/HBoxContainer/ViewGrid"]
margin_right = 95.0
margin_bottom = 24.0
size_flags_vertical = 0
text = "Wireframe"

[node name="Lighting" type="CheckBox" parent="Control/StatePanel/HBoxContainer/ViewGrid"]
visible = false
margin_left = 99.0
margin_right = 181.0
margin_bottom = 24.0
text = "Normals"
[connection signal="subdivision_level_changed" from="." to="Control" method="_on_Spatial_subdivision_level_changed"]
[connection signal="pressed" from="Control/StatePanel/HBoxContainer/TransGrid/RotationState/RotationReset" to="Control" method="_on_RotationReset_pressed"]
[connection signal="value_changed" from="Control/StatePanel/HBoxContainer/TransGrid/RotationState/RotationXState" to="." method="_on_RotationXState_value_changed"]
[connection signal="value_changed" from="Control/StatePanel/HBoxContainer/TransGrid/RotationState/RotationYState" to="." method="_on_RotationYState_value_changed"]
[connection signal="value_changed" from="Control/StatePanel/HBoxContainer/TransGrid/RotationState/RotationZState" to="." method="_on_RotationZState_value_changed"]
[connection signal="pressed" from="Control/StatePanel/HBoxContainer/TransGrid/ModelState/LoadButton" to="." method="_on_LoadButton_pressed"]
[connection signal="pressed" from="Control/StatePanel/HBoxContainer/TransGrid/ModelState/CubeButton" to="." method="_on_CubeButton_pressed"]
[connection signal="value_changed" from="Control/StatePanel/HBoxContainer/PropsGrid/ScaleState" to="." method="_on_ScaleState_value_changed"]
[connection signal="value_changed" from="Control/StatePanel/HBoxContainer/PropsGrid/SubdivisionState" to="." method="_on_SubdivisionLevel_value_changed"]
[connection signal="toggled" from="Control/StatePanel/HBoxContainer/ViewGrid/Wireframe" to="." method="_on_Wireframe_toggled"]
